Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84069

Preset QGradients have invalid stops QVector, many presets have stopped working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.15.0 RC
    • GUI: Painting
    • None
    • All

      Some of the preset gradients I'm using work, some don't.  In QML for e.g. Gradient::JuicyCake gets painted in Qt 5.14.2, while in the latest Qt 5.15 RC it does not.  

       

      import QtQuick 2.12
      
      Rectangle{
          width: 100
          height: 100
          gradient: Gradient.JuicyCake
      }
      

       

        For Gerrit Dashboard: QTBUG-84069
        # Subject Branch Project Status CR V

            peppe Giuseppe D'Angelo
            adrian.gabureanu Adrian Gabureanu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: