Workaround for regression causing most gradient presets to not be shown

The implementation of gradient presets was refactored for 5.15. It
turns out that this exposed some issue with QVector/QArrayData, which
again causes most gradient presets to fail to show in qtdeclarative.
This patch works around that issue.

Task-number: QTBUG-84069
Change-Id: Ifdf5ba8f2621ec3b23e13da2a6dc046408464d4d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>